# rust-ms-detours

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: ci.yml
src/: bindings.rs  lib.rs
